Add AVX512 lib and spatial_full_distortion_kernel() AVX512 optimization

--- a/Source/Lib/Common/ASM_AVX512/CMakeLists.txt
+++ b/Source/Lib/Common/ASM_AVX512/CMakeLists.txt
@@ -1,9 +1,9 @@
-# 
+#
 # Copyright(c) 2019 Intel Corporation
 # SPDX - License - Identifier: BSD - 2 - Clause - Patent
-# 
+#
 
-# Common/ASM_AVX2 Directory CMakeLists.txt
+# Common/ASM_AVX512 Directory CMakeLists.txt
 
 # Include Encoder Subdirectories
 include_directories(${PROJECT_SOURCE_DIR}/Source/API/)
@@ -22,14 +22,14 @@ if(UNIX)
     if("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
         SET(CMAKE_C_FLAGS "-fPIC -static-intel -w")
     else()
-        SET(CMAKE_C_FLAGS "-march=core-avx2")
+        SET(CMAKE_C_FLAGS "-mavx512vl -mavx512bw")
     endif()
 else()
     # Intel Windows (*Note - The Warning level /W0 should be made to /W4 at some point)
     if("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
         SET(CMAKE_C_FLAGS "/W0 /Qwd10148 /Qwd10010 /Qwd10157")
     else()
-        SET(CMAKE_C_FLAGS "/arch:AVX2 /MP")    
+        SET(CMAKE_C_FLAGS "/arch:AVX2 /MP")
     endif()
 endif()
 
@@ -38,9 +38,6 @@ file(GLOB all_files
     "*.asm"
     "*.c")
 
-add_library(COMMON_ASM_AVX2
+add_library(COMMON_ASM_AVX512
     ${all_files}
 )
-
-
-
