--- a/Source/Lib/Common/ASM_SSE4_1/CMakeLists.txt
+++ b/Source/Lib/Common/ASM_SSE4_1/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories (${PROJECT_SOURCE_DIR}/Source/Lib/Common/ASM_SSE2/)
 include_directories (${PROJECT_SOURCE_DIR}/Source/Lib/Common/ASM_SSSE3/)
 include_directories (${PROJECT_SOURCE_DIR}/Source/Lib/Common/ASM_SSE4_1/)
 include_directories (${PROJECT_SOURCE_DIR}/Source/Lib/Common/ASM_AVX2/)
+include_directories (${PROJECT_SOURCE_DIR}/Source/Lib/Common/ASM_AVX512/)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     SET(CMAKE_C_FLAGS "/MP")    
