--- a/Config/Sample.cfg
+++ b/Config/Sample.cfg
@@ -13,7 +13,7 @@ UseQpFile                       : 0                       # When set to 1, overw
 QpFile                          : SVTQPFile.txt           # File with rows of QP values corresponding to QP values for each frame
 
 StatFile                        : AV1SVTEncoderStat.log   # Optional output for frame statistics.
-#ReconFile                      : Recon.yuv               # optional output for recon [Enabled when valid file name is added]
+ReconFile                      : Recon.yuv               # optional output for recon [Enabled when valid file name is added]
 
 #====================== Encoding Presets ===============================
 EncoderMode                     : 0             # Encoder Preset [0,1,2,3,4,5,6,7] 0 = highest quality, 7 = highest speed
