--- a/Config/Sample.cfg
+++ b/Config/Sample.cfg
@@ -4,7 +4,7 @@
 #
 
 #====================== File I/O ===============================
-InputFile                       : C:\Nader\Streams\BQSquare_416x240_60.yuv # Required output.
+InputFile                       : C:\Nader\Streams\shields_640x360_60f.yuv # Required output.
 
 StreamFile                      : Bitstream.ivf           # Output bit stream file in ivf format
 ErrorFile                       : SVTEncoderLog.log       # Error log displaying configuration or encode errors
@@ -23,9 +23,9 @@ EncoderBitDepth                 : 8             # Encoder operating bit-depth (8
 CompressedTenBitFormat          : 0             # Off-line packing of the 10bit yuv: requires two bits packed input (0: OFF, 1: ON)
 
 #====================== Source Definitions ===================
-SourceWidth                     : 416           # [64 - 4096]
-SourceHeight                    : 240           # [64 - 2304]
-FrameToBeEncoded                : 20            # Number of frames to be coded
+SourceWidth                     : 640           # [64 - 4096]
+SourceHeight                    : 360           # [64 - 2304]
+FrameToBeEncoded                : 2            # Number of frames to be coded
 BufferedInput                   : -1            # Buffers N-frames to avoid reading from disk. Use -1 to not buffer.
 
 #====================== Frame Rate ===============================
